k8s/services/frontend/overlays/dev/patches/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  hostnames:
  - www.ml-server-dev.com
